--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "cross-env": "~5.2.0",
         "eslint": "~5.9.0",
         "eslint-find-rules": "~3.3.1",
-        "eslint-plugin-isotropic": "~0.1.0",
+        "eslint-plugin-isotropic": "~0.2.0",
         "mocha": "~5.2.0",
         "nyc": "~13.1.0"
     },
@@ -95,9 +95,9 @@
         "lint": "npm run build > /dev/null && eslint-find-rules -u && eslint js test",
         "posttest": "[ -z \"$npm_config_coverage\" ] || nyc check-coverage",
         "prepare": "npm run build",
-        "prepublishOnly": "npm audit && npm test --coverage",
+        "prepublishOnly": "npm test --coverage",
         "pretest": "npm run lint",
         "test": "cross-env BABEL_ENV=test nyc mocha"
     },
-    "version": "0.6.0"
+    "version": "0.7.0"
 }
