--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "eslint-find-rules": "~3.3.1",
         "eslint-plugin-isotropic": "~0.4.2",
         "mocha": "~6.1.4",
-        "nyc": "~14.1.0"
+        "nyc": "~14.1.1"
     },
     "engines": {
         "node": "^10.15.3",
@@ -69,6 +69,14 @@
         "root": true
     },
     "homepage": "https://github.com/ibi-group/eslint-config-isotropic",
+    "keywords": [
+        "config",
+        "eslint",
+        "eslint config",
+        "eslint-config",
+        "eslintconfig",
+        "isotropic"
+    ],
     "license": "BSD-3-Clause",
     "main": "lib/eslint-config-isotropic.js",
     "name": "eslint-config-isotropic",
